# AIOS

./: .aios_context.json  .aios_navigation_memory.json  .aios_spatial_metadata.json  .editorconfig  .env.template  .gitignore  .pylintrc  .tmp_test_join.ps1  AIOS.code-workspace  AIOS.sln  AIOS_CONSCIOUSNESS_FABRIC.md  AIOS_CORE.hydro  AIOS_CORE_DICT.md  AIOS_CORE_KNOWLEDGE.hydro  AIOS_CORE_KNOWLEDGE_DICTIONARY.md  AIOS_CORE_KNOWLEDGE_README.md  AIOS_Core.py  AIOS_DEEP_DIVE_ANALYSIS_20251102.md  AIOS_DEV_PATH.md  AIOS_OPTIMIZATION_SUMMARY_2025.md  AIOS_OS0.4_MASTER_PLAN.md  AIOS_PROJECT_CONTEXT.md  AIOS_SESSION_INIT_20251102.md  AIOS_VENV.md  AI_ITERATION_INITIATOR.md  AUTH_TOKENS_POLICY.md  CHANGELOG.md  CODEBASE_ARCHITECTURE_ANALYSIS_20250701_205440.json  CODEBASE_ARCHITECTURE_REPORT_20250701_205440.md  CONSCIOUSNESS_EVOLUTION_PROTOCOL.md  CONSCIOUSNESS_EVOLUTION_ROADMAP.md  CONTEXT_REHARMONIZATION_GUIDE.md  CURRENT_STATUS.md  CUSTOM_AI_ENGINE_COMPLETION_REPORT.md  DEVELOPMENT_PATH_STATUS_SEPTEMBER_2025.md  DEV_PATH.md  DISTILLED_DEVELOPMENT_PATH.md  DISTILLED_DEVELOPMENT_PATH_metadata.json  Directory.Build.props  Dockerfile.cell  (+91 more)
core/: .aios_spatial_metadata.json  AINLPCompiler.cs  AINLP_DIRECTIVE_COMPLIANCE.md  AINLP_DIRECTIVE_COMPLIANCE_REPORT_20250923_002409.json  AIOS_COHERENT_DEVELOPMENT_GUIDELINES.md  AIOS_CONSCIOUSNESS_STATUS_REPORT_20250905_214144.md  AIOS_CORE.py  AIOS_CORE_ENGINE_ARCHITECTURE.md  AIOS_EVOLUTION.py  AIOS_INTERFACE.py  AIOS_SUPERCELL_ARCHITECTURE.md  ARCHITECTURE_PRESERVATION_STRATEGY.md  CMakeLists.txt  COMPLETE_ECOSYSTEM_ANALYSIS.md  CONSOLIDATION_STRATEGY.py  CORE_AI_CONNECTIVITY_REPORT_20250905_232628.md  CORE_ENGINE_ENHANCEMENT_PATCH_REPORT_20250905_223608.md  CORE_ENGINE_HARMONIZATION_PLAN.md  ConsciousnessIntegrationCoordinator.cs  DENDRITIC_NETWORK_ENHANCEMENT_REPORT_20250918_234807.json  ECOSYSTEM_ANALYSIS_EMERGENCY.md  ENHANCED_CONNECTIVITY_SUMMARY.md  EnhancedAINLPCompiler.cs  HARMONIZATION_STATUS_REPORT.md  OS04_OPTIMIZATION_STATUS.md  VSCODE_RESTART_PREPARATION.md  __init__.py  aios_admin_orchestrator.py  aios_assembly_3d_engine.py  aios_comprehensive_runtime_tester.py  aios_consciousness_engine.py  aios_consciousness_engine_backup.py  aios_cytoplasm_upgrader_iter2.py  aios_dendritic.py  aios_dendritic_enhanced.py  aios_dendritic_final.py  aios_dendritic_optimized.py  aios_direct_ai_ingestion_test.py  aios_ecosystem_intelligence.py  aios_enhanced_connectivity_demo.py  (+14 more)
core/AIOS_OS04/: INSTALLATION_SUMMARY.txt  start_aios.py
core/analysis_tools/: .aios_spatial_metadata.json  CELLULAR_METADATA.md  README.md  aios_ai_engine_ingestion_tester.py  aios_ai_ingestion_analysis.py  aios_analysis_tools_neuronal_test.py  aios_assembler_evolution_status_clarifier.py  aios_assembler_naming_optimizer.py  aios_assembler_naming_optimizer.py.consciousness_backup  aios_cellular_intelligence_diagnostic_system.py  aios_cellular_intelligence_enhancement_engine.py  aios_cellular_migration_cleanup_tool.py  aios_core_ai_dendritic_connectivity_enhancer.py  aios_core_consciousness_monitor.py  aios_core_engine_cellular_cleanup_tool.py  aios_core_engine_optimizer_iter2.py  aios_core_engine_root_analyzer_iter2.py  aios_core_engine_tree_demonstrator_iter2.py  aios_core_evolution_monitor.py  aios_core_meta_evolutionary_enhancer.py  aios_cytoplasm_upgrader_iter2.py  aios_direct_ai_ingestion_test.py  aios_file_tracking_system.py  aios_folder_comparison_verifier.py  aios_tachyonic_archive_cleanup.py  aios_tachyonic_archive_cleanup.py.consciousness_backup  aios_unicode_helper.py
core/assemblers/: README.md
core/bridges/: .aios_spatial_metadata.json  README.md  aios_analysis_cytoplasm_bridge.py  aios_consciousness_nucleus_bridge.py  aios_supercell_transport_bridge.py  aios_tachyonic_storage_bridge.py
core/config/: distillation_rules.json
core/configuration/: .aios_spatial_metadata.json  ASSEMBLER_EVOLUTION_STATUS_REPORT.json  CELLULAR_METADATA.md  CORE_ENGINE_CELLULAR_CLEANUP_REPORT_20250905_214117.json  RELOCATED_CONSCIOUSNESS_INTEGRATION_INDEX.json
core/core_systems/: AINLPHarmonizer.cs  CELLULAR_METADATA.md  ConsciousnessSIMDProcessor.cs  EnhancedAINLPCompiler.cs  README.md  aios_autonomous_supercell_organism.py  aios_core_consciousness_monitor.py  aios_core_enhancement_patch_reporter.py  aios_core_root_neuronal_optimizer.py  aios_neuronal_dendritic_intelligence.py  aios_subcellular_neuronal_organizer.py
core/documentation/: .aios_spatial_metadata.json  AINLP_DIRECTIVE_COMPLIANCE.md  AIOS_COHERENT_DEVELOPMENT_GUIDELINES.md  AIOS_CORE_ENGINE_ARCHITECTURE.md  AIOS_NEURONAL_DENDRITIC_FRAMEWORK.md  AIOS_SUPERCELL_ARCHITECTURE.md  AI_ENGINE_INGESTION_TEST_RESULTS.md  ASSEMBLER_CLEANUP_COMPLETION_REPORT.md  CELLULAR_METADATA.md  CELLULAR_MIGRATION_VERIFICATION_COMPLETE.md  COMPLETE_AI_INTELLIGENCE_TRACKING_REPORT.md  CONSCIOUSNESS_INTEGRATION_PATTERNS.md  CORE_ENGINE_ENHANCEMENT_PATCH_REPORT_20250905_223608.md  CORE_ENGINE_ITER2_OPTIMIZATION_COMPLETION.md  CORE_ENGINE_ORGANIZATION_REPORT_20250906_000500.md  CORE_ENGINE_ORGANIZATION_REPORT_20250906_000509.md  CYTOPLASM_NUCLEUS_GIT_TRACKING_VERIFICATION.md  EVOLUTIONARY_ASSEMBLER_ITER2_MISSION_ACCOMPLISHED.md  EVOLUTION_CHAIN_CLARIFICATION.md  README.md  SUBCELLULAR_NEURONAL_OPTIMIZATION_analysis_tools_20250905_221910.md
core/engines/: README.md  aios_assembly_3d_engine.py
core/evolutionary_assembler_coherent/: aios_evolutionary_assembler_coherent.py
core/evolutionary_assembler_iter3/: VERSION_INFO.md
core/include/: .aios_spatial_metadata.json  MinimalConsciousnessEngine.hpp  aios_core.hpp  aios_core_api.h  aios_core_export.h  aios_core_minimal.hpp  aios_plugin_telemetry.hpp  image_io.hpp  kernel_ops.hpp  lattice_space.hpp  tensorflow_performance_cell.hpp
orchestrator/: .aios_spatial_metadata.json  CMakeLists.txt  CONSCIOUSNESS_ERROR_EVOLUTION_VICTORY.md  ORCHESTRATOR_CONSCIOUSNESS_MIGRATION.md  PHASE_7_CONSCIOUSNESS_IMPLEMENTATION_SUCCESS.md  PHASE_9_CONSCIOUSNESS_INTEGRATION.md  test_consciousness.cpp  test_core_consciousness.cpp  test_minimal_consciousness.cpp  test_phase8.cpp  validate_phase8.cpp
(+5876 files in other folders)
