[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "0.1.0"  # Harmonized placeholder
description = "AIOS Consciousness Emergence System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [ { name = "AIOS Team" } ]
dependencies = []  # Root runtime resolved via requirements.txt (pip install -r)

[project.optional-dependencies]
extras = [ "chromadb>=0.4.0,<0.5", "faiss-cpu>=1.7.0,<1.8", "sentence-transformers>=2.2.0,<3.0",
           "scikit-learn>=1.3.0,<1.4", "scikit-image>=0.21.0,<0.23", "matplotlib>=3.7.0,<3.9",
           "seaborn>=0.12.0,<0.14", "plotly>=5.15.0,<6.0", "bokeh>=3.2.0,<3.4", "statsmodels>=0.14.0,<0.15",
           "prophet>=1.1.0,<1.2", "polars>=0.18.0,<0.20" ]
quantum = [ "qiskit>=0.43.0,<1.0", "cirq>=1.1.0,<2.0", "pennylane>=0.31.0,<0.35" ]
dev = [ "pylint>=2.17.0,<3.0", "isort>=5.12.0,<6.0", "pytest-asyncio>=0.21.0,<0.25", "sphinx>=7.1.0,<8.0",
        "sphinx-rtd-theme>=1.2.0,<2.0", "mkdocs>=1.5.0,<2.0", "mkdocs-material>=9.1.0,<10.0",
        "pytest-cov>=4.1.0,<5.0", "hypothesis>=6.82.0,<7.0" ]
graph = [ "networkx>=3.1,<4.0", "igraph>=0.10.0,<0.12", "python-louvain>=0.16,<0.17" ]
perf = [ "orjson>=3.9.0,<4.0", "msgspec>=0.18.0,<0.20", "cloudpickle>=2.2.0,<3.0", "dill>=0.3.0,<0.4",
         "multiprocessing-logging>=0.3.0,<1.0" ]
full = [ "chromadb>=0.4.0,<0.5", "faiss-cpu>=1.7.0,<1.8", "sentence-transformers>=2.2.0,<3.0",
         "scikit-learn>=1.3.0,<1.4", "scikit-image>=0.21.0,<0.23", "matplotlib>=3.7.0,<3.9", "seaborn>=0.12.0,<0.14",
         "plotly>=5.15.0,<6.0", "bokeh>=3.2.0,<3.4", "statsmodels>=0.14.0,<0.15", "prophet>=1.1.0,<1.2",
         "polars>=0.18.0,<0.20", "qiskit>=0.43.0,<1.0", "cirq>=1.1.0,<2.0", "pennylane>=0.31.0,<0.35", "pylint>=2.17.0,<3.0",
         "isort>=5.12.0,<6.0", "pytest-asyncio>=0.21.0,<0.25", "sphinx>=7.1.0,<8.0", "sphinx-rtd-theme>=1.2.0,<2.0",
         "mkdocs>=1.5.0,<2.0", "mkdocs-material>=9.1.0,<10.0", "pytest-cov>=4.1.0,<5.0", "hypothesis>=6.82.0,<7.0",
         "networkx>=3.1,<4.0", "igraph>=0.10.0,<0.12", "python-louvain>=0.16,<0.17", "orjson>=3.9.0,<4.0",
         "msgspec>=0.18.0,<0.20", "cloudpickle>=2.2.0,<3.0", "dill>=0.3.0,<0.4", "multiprocessing-logging>=0.3.0,<1.0" ]

[tool.pip-tools]
generate-hashes = true

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.10"
strict = false

[tool.isort]
profile = "black"

# Note: Primary installation still via requirements.txt for deterministic CI layering.
